Actually fix the scrolling glitch

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 	  </div>
 	</div>
       </div>
+      <div class="section">
+	<h1>About Me</h1>
+	<p>Lorem ipsum dojlaskdlknwaeltkn dlaksndtlkajs sakdnltknsadknalskd
+	  laksdlnktnasdl lkasndt klaknsdlkwejkals dlk aksenltkjas lknsktl
+	  lkansltknlsadklksajd lknsaldkfjlaksj kjalsk kjqjpqj pqjprjpq qwertijpasn
+	</p>
+      </div>
     </div>
     <script src="js/main.js"></script>
   </body>
