--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Atomic+Age|Lato" rel="stylesheet">
     <!-- icons -->
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- reset -->
     <link href="css/normalize.min.css" rel="stylesheet"/>
     <!-- styles -->
