Two letter fix to FontAwesome icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	    <div class="record-image"><div class="record-pin"></div></div>
 	  </div>
 	</div>
-	  <a class="down-btn" href="#about"><i class="fa-chevron-down fa-3x" aria-hidden="true"></i></a>
+	  <a class="down-btn" href="#about"><i class="fa fa-chevron-down fa-3x" aria-hidden="true"></i></a>
       </div>
       <div class="section" id="about">
 	<img class="portrait-photo" alt="Griffin Mareske" src="static/me.jpg"/>
