--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 	  <a class="down-btn" href="#about"><i class="fa fa-chevron-down fa-3x" aria-hidden="true"></i></a>
       </div>
       <div class="section" id="about">
+	<div class="triangle-seperator"></div>
 	<img class="portrait-photo" alt="Griffin Mareske" src="static/me.jpg"/>
 	<h1>About Me</h1>
-	<p>Lorem ipsum dojlaskdlknwaeltkn dlaksndtlkajs sakdnltknsadknalskd
-	  laksdlnktnasdl lkasndt klaknsdlkwejkals dlk aksenltkjas lknsktl
-	  lkansltknlsadklksajd lknsaldkfjlaksj kjalsk kjqjpqj pqjprjpq qwertijpasn
+	<p class="about-text">
+	  I'm a musician and programmer studying at <a href="https://www.grinnell.edu/">Grinnell College</a>. I'm also a professional breather of 19 years. My mansion has four bathrooms and a teleportation circle to the fourth circle of hell, which is my winter home for when Iowa is too cold.
 	</p>
-	<a class="down-btn" href=""><i class="fa-chevron-down fa-3x"></i></a>
+	<a class="down-btn" href=""><i class="fa fa-chevron-down fa-3x"></i></a>
       </div>
       <div id="projects" class="section"></div>
       <div id="timeline" class="section"></div>
