Add boilerplate for new sections and fix indents

--- a/index.html
+++ b/index.html
@@ -18,30 +18,41 @@
   </head>
 
   <body>
-      <div class="section" id="big-header">
-	<h1>Griffin Mareske</h1>
-	<h3>Produced in 1998</h3>
-	<p>Hello, sample text.</p>
-	<div class="turntable">
-	  <div class="record-needle"></div>
-	  <div class="record-disc" id="record-disc">
-	    <div class="record-image"><div class="record-pin"></div></div>
-	  </div>
+    <div id="big-header" class="section">
+      <h1>Griffin Mareske</h1>
+      <h3>Produced in 1998</h3>
+      <p>Hello, sample text.</p>
+      <div class="turntable">
+	<div class="record-needle"></div>
+	<div class="record-disc" id="record-disc">
+	  <div class="record-image"><div class="record-pin"></div></div>
 	</div>
-	  <a class="down-btn" href="#about"><i class="fa fa-chevron-down fa-3x" aria-hidden="true"></i></a>
       </div>
-      <div class="section" id="about">
-	<div class="triangle-seperator"></div>
-	<img class="portrait-photo" alt="Griffin Mareske" src="static/me.jpg"/>
-	<h1>About Me</h1>
-	<p class="about-text">
-	  I'm a musician and programmer studying at <a href="https://www.grinnell.edu/">Grinnell College</a>. I'm also a professional breather of 19 years. My mansion has four bathrooms and a teleportation circle to the fourth circle of hell, which is my winter home for when Iowa is too cold.
-	</p>
-	<a class="down-btn" href=""><i class="fa fa-chevron-down fa-3x"></i></a>
-      </div>
-      <div id="projects" class="section"></div>
-      <div id="timeline" class="section"></div>
-      <div id="contact" class="section"></div>
+      <a class="down-btn" href="#about"><i class="fa fa-chevron-down fa-3x" aria-hidden="true"></i></a>
+    </div>
+    <!-- / big header -->
+    <div id="about" class="section">
+      <div class="triangle-seperator"></div>
+      <img class="portrait-photo" alt="Griffin Mareske" src="static/me.jpg"/>
+      <h1>About Me</h1>
+      <p class="about-text">
+	I'm a musician and programmer studying at <a href="https://www.grinnell.edu/">Grinnell College</a>. I'm also a professional breather of 19 years. My mansion has four bathrooms and a teleportation circle to the fourth circle of hell, which is my winter home for when Iowa is too cold.
+      </p>
+      <a class="down-btn" href="#projects"><i class="fa fa-chevron-down fa-3x"></i></a>
+    </div>
+    <!-- / about -->
+    <div id="projects" class="section">
+      <a class="down-btn" href="#timeline"><i class="fa fa-chevron-down fa-3x"></i></a>
+    </div>
+    <!-- / projects -->
+    <div id="timeline" class="section">
+      <a class="down-btn" href="#contact"><i class="fa fa-chevron-down fa-3x"></i></a>
+    </div>
+    <!-- / timeline -->
+    <div id="contact" class="section">
+
+    </div>
+    <!-- / contact -->
 
     <script src="js/main.js"></script>
   </body>
