Add social links and WIP headings

--- a/index.html
+++ b/index.html
@@ -42,15 +42,27 @@
     </div>
     <!-- / about -->
     <div id="projects" class="section">
+      <h1>Work In Progress</h1>
       <a class="down-btn" href="#timeline"><i class="fa fa-chevron-down fa-3x"></i></a>
     </div>
     <!-- / projects -->
     <div id="timeline" class="section">
+      <h1>Work In Progress</h1>
       <a class="down-btn" href="#contact"><i class="fa fa-chevron-down fa-3x"></i></a>
     </div>
     <!-- / timeline -->
     <div id="contact" class="section">
-
+      <h1>Contact Me</h1>
+      <p><i class="fa fa-phone"></i>  <a href="tel:+19132068204">913-206-8204</a></p>
+      <p>gmareske@gmail[dot]com</p>
+      <ul class="contact-list">
+	<li class=""><a href="mailto:gmareske@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
+	<li class=""><a href="https://github.com/gmareske"><i class="fa fa-github fa-2x"></i></a></li>
+	<li class=""><a href="https://snapchat.com/add/grifmsk"><i class="fa fa-snapchat-ghost fa-2x"></i></a></li>
+	<li class=""><a ref="https://open.spotify.com/user/gmareske"><i class="fa fa-spotify fa-2x"></i></a></li>
+	<li class=""><a href=""><i class="fa fa-soundcloud fa-2x"></i></a></li>
+	<li class=""><a href=""><i></i></a></li>
+      </ul>
     </div>
     <!-- / contact -->
 
