Add projects section styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,30 @@
     </div>
     <!-- / about -->
     <div id="projects" class="section">
-      <h1>Work In Progress</h1>
+      <h2>Projects</h2>
+      <div class="projects-section projects-links">
+	<h3>Featured</h3>
+	<ul class="projects-list">
+	  <li><div class="project-link-wrapper"><i class="fa fa-code-fork"></i> <a href="https://gmareske.github.io/trimap">Trimap</a></div><div class="project-text-wrapper">Hackathon project from HackISU</div></li>
+	  <li><div class="project-link-wrapper"><i class="fa fa-code-fork"></i> <a href="https://github.com/gmareske/little-brainfuck">Little Brainfuck</a></div><div class="project-text-wrapper">A small brainfuck interpreter written in C</div></li>
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	  <li><div class="project-text-wrapper">More projects live </div><a href="https://github.com/gmareske">here</a></li>
+	</ul>
+      </div>
+      <div class="projects-section projects-sites">
+	<h3>Other Websites</h3>
+	<p>Work in progress</p>
+	<ul class="projects-list">
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	  <li><a href=""></a></li>
+	</ul>
+      </div>
       <a class="down-btn" href="#timeline"><i class="fa fa-chevron-down fa-3x"></i></a>
     </div>
     <!-- / projects -->
@@ -59,10 +82,11 @@
 	<li class=""><a href="mailto:gmareske@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
 	<li class=""><a href="https://github.com/gmareske"><i class="fa fa-github fa-2x"></i></a></li>
 	<li class=""><a href="https://snapchat.com/add/grifmsk"><i class="fa fa-snapchat-ghost fa-2x"></i></a></li>
-	<li class=""><a ref="https://open.spotify.com/user/gmareske"><i class="fa fa-spotify fa-2x"></i></a></li>
+	<li class=""><a href="https://open.spotify.com/user/gmareske"><i class="fa fa-spotify fa-2x"></i></a></li>
 	<li class=""><a href=""><i class="fa fa-soundcloud fa-2x"></i></a></li>
 	<li class=""><a href=""><i></i></a></li>
       </ul>
+      <a class="down-btn" href=""><i class="fa fa-chevron-up fa-3x"></i></a>
     </div>
     <!-- / contact -->
 
