About and Header copy changes
Definitely not final

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="big-header" class="section">
       <h1>Griffin Mareske</h1>
       <h3>Produced in 1998</h3>
-      <p>Hello, sample text.</p>
+      <p>Somewhere between music and computers</p>
       <div class="turntable">
 	<div class="record-needle"></div>
 	<div class="record-disc" id="record-disc">
@@ -36,7 +36,7 @@
       <img class="portrait-photo" alt="Griffin Mareske" src="static/me.jpg"/>
       <h1>About Me</h1>
       <p class="about-text">
-	I'm a musician and programmer studying at <a href="https://www.grinnell.edu/">Grinnell College</a>. I'm also a professional breather of 19 years. My mansion has four bathrooms and a teleportation circle to the fourth circle of hell, which is my winter home for when Iowa is too cold.
+	I'm a musician and programmer studying at <a href="https://www.grinnell.edu/">Grinnell College.</a> I create <a href="#projects">cool shit</a> using code and music. I play saxophone and piano. Looking for a creative, motivated, and technical person? <a href="#contact">Contact me.</a>
       </p>
       <a class="down-btn" href="#projects"><i class="fa fa-chevron-down fa-3x"></i></a>
     </div>
