--- a/index.html
+++ b/index.html
@@ -70,14 +70,17 @@
     </div>
     <!-- / projects -->
     <div id="timeline" class="section">
-      <h1>Work In Progress</h1>
+      <h1>Previously...</h1>
+      <ul class="timeline-list">
+
+      </ul>
       <a class="down-btn" href="#contact"><i class="fa fa-chevron-down fa-3x"></i></a>
     </div>
     <!-- / timeline -->
     <div id="contact" class="section">
       <h1>Contact Me</h1>
       <p><i class="fa fa-phone"></i>  <a href="tel:+19132068204">913-206-8204</a></p>
-      <p>gmareske@gmail[dot]com</p>
+      <a href="mailto:gmareske@gmail.com">gmareske@gmail[dot]com</a>
       <ul class="contact-list">
 	<li class=""><a href="mailto:gmareske@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
 	<li class=""><a href="https://github.com/gmareske"><i class="fa fa-github fa-2x"></i></a></li>
