initial timeline structure

--- a/index.html
+++ b/index.html
@@ -71,9 +71,37 @@
     <!-- / projects -->
     <div id="timeline" class="section">
       <h1>Previously...</h1>
-      <ul class="timeline-list">
-
+      <div class="personal-links">
+	<a class="personal-link" href="">Resume</a>
+      </div>
+      <ul class="timeline-wrapper">
+	<li><div class="timeline-block">
+	    <span class="timeline-date">1998</span>
+	    <span class="timeline-title">Born</span>
+	    <span class="timeline-content">Pretty important, at least to me</span>
+	</div></li>
+	<li><div class="timeline-block">
+	    <span class="timeline-date">2015</span>
+	    <span class="timeline-title">Childcare Assistant</span>
+	    <span class="timeline-content">Organized and ran programs for local YMCA</span>
+	</div></li>
+	<li><div class="timeline-block">
+	    <span class="timeline-date"></span>
+	    <span class="timeline-title"></span>
+	    <span class="timeline-content"></span>
+	</div></li>
+	<li><div class="timeline-block">
+	    <span class="timeline-date"></span>
+	    <span class="timeline-title"></span>
+	    <span class="timeline-content"></span>
+	</div></li>
+	<li><div class="timeline-block">
+	    <span class="timeline-date"></span>
+	    <span class="timeline-title"></span>
+	    <span class="timeline-content"></span>
+	</div></li>
       </ul>
+
       <a class="down-btn" href="#contact"><i class="fa fa-chevron-down fa-3x"></i></a>
     </div>
     <!-- / timeline -->
