--- a/index.html
+++ b/index.html
@@ -27,21 +27,41 @@
       </div>
       <div class="text-container">
 	<a href="/" class="header"><h1>Griffin Mareske</h1></a>
-	<!-- <p><i>"What the everliving fuck do i put here?"</i></p> -->
 	<hr/>
 	<ul id="link-nav" class="link-list">
 	  <li><span id="about">About Me</span></li>
 	  <li><span id="project">Projects</span></li>
 	  <li><a id="resume" href="#">Resume</a></li>
-	  <li><a id="links">Links</a></li>
-	  <li><a id="blog">Blog</a></li>
+	  <li><span id="links">Links</span></li>
+	  <!-- <li><a id="blog">Blog</a></li> -->
 	</ul>
 	<a id="back-btn" class="hide">Back</a>
 	<!-- About Section -->
 	<div id="about-txt" class="text hide">
 	  <h2>About Me</h2>
-	  <p>I am a Grinnell College undergrad '20 studying computer
-	  science and music.</p>
+	  <p>I study computer science and music at Grinnell
+	  College, class of 2020. Currently, I manage student workers in
+	    Grinnell College's IT department and tutor on the
+	  side. I perform jazz saxophone and piano with college
+	  ensembles and on my own, whenever I can.
+	  </p>
+	  <p>
+	    I am very passionate about projects that tie my two
+	    disciplines, technology and music, together as well as
+	    other work in the digital humanities. At the moment, I
+	    hack on my own <a href="https://github.com/gmareske/">
+	    personal projects</a> as well as contribute to open
+	    source.
+	  </p>
+
+	  <p>
+	    Contact me at the social links below, or at:
+	  </p>
+
+	  <ul>
+	    <li><i class="fa fa-envelope"></i> <a href="mailto:gmareske@gmail.com">gmareske@gmail.com</a></li>
+	    <li><i class="fa fa-phone"></i> +19132068204</li>
+	  </ul>
 	</div>
 	
 	<!-- Project Section -->
@@ -63,6 +83,31 @@
 	    <li><a href="https://github.com/gmareske/little-brainfuck"><i class="fa fa-github"></i></a><b> Little Brainfuck</b>
 		<p>Small brainfuck interpreter written in C.</p>
 	    </li>
+	    <hr/>
+	    <li><a href="http://kdic.grinnell.edu/stream"><i class="fa fa-music"></i></a>
+	      <a href=""><i class="fa fa-github"></i></a><b> Cyborg
+		Soiree </b>
+	      <p>Weekly radio show on KDICfm powered by Python
+	      code. Code is on github and you can listen to an online
+		stream <a href="http://kdic.grinnell.edu/stream">here</a>.</p>
+	    </li>
+	  </ul>
+	</div>
+	<!-- Links section -->
+	<div id="links-txt" class="text hide">
+	  <h2>My Links</h2>
+	  <p>
+	    It's a staple for everyone's personal website to
+	    curate some awesome links to interweb content.
+	  </p>
+	  <ul>
+	    <li>
+	      <a href="http://www.gigamonkeys.com/book/">Practical
+		Common Lisp</a>
+	      <p>Free and amazing resource to learn Lisp by completing
+	      projects rather than mindlessly typing in syntax.</p>
+	    </li>
+	    <hr/>
 	  </ul>
 	</div>
 	
