--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<ul id="link-nav" class="link-list">
 	  <li><span id="about">About Me</span></li>
 	  <li><span id="project">Projects</span></li>
-	  <li><a id="resume" href="#">Resume</a></li>
+	  <li><a id="resume" href="ResumeGriffinMareske.pdf">Resume</a></li>
 	  <li><span id="links">Links</span></li>
 	  <!-- <li><a id="blog">Blog</a></li> -->
 	</ul>
@@ -39,19 +39,27 @@
 	<!-- About Section -->
 	<div id="about-txt" class="text hide">
 	  <h2>About Me</h2>
-	  <p>I study computer science and music at Grinnell
-	  College, class of 2020. Currently, I manage student workers in
-	    Grinnell College's IT department and tutor on the
-	  side. I perform jazz saxophone and piano with college
-	  ensembles and on my own, whenever I can.
+	  <p>
+            I'm a student at Grinnell College graduating in May 2020 with a
+            degree in computer science and music.
+            I'm also a professional musician who plays saxophone and piano.
+            I'm currently looking for employment in software development and
+            technology support roles.
 	  </p>
+          <p>
+            On campus, I run a student group that facilitates student music
+            and puts together huge music shows every semester.
+            I enjoy playing in latin, jazz, and funk ensembles, and I host
+            a jazz-themed radio show every week.
+            I also have worked at the college's IT department for the past
+            four years, where I've provided technical support to over a
+            thousand members of the Grinnell College community.
+          </p>
 	  <p>
 	    I am very passionate about projects that tie my two
-	    disciplines, technology and music, together as well as
-	    other work in the digital humanities. At the moment, I
+	    disciplines, technology and music. At the moment, I
 	    hack on my own <a href="https://github.com/gmareske/">
-	    personal projects</a> as well as contribute to open
-	    source.
+	    personal projects</a>.
 	  </p>
 
 	  <p>
@@ -59,7 +67,9 @@
 	  </p>
 
 	  <ul>
-	    <li><i class="fa fa-envelope"></i> <a href="mailto:gmareske@gmail.com">gmareske@gmail.com</a></li>
+	    <li><i class="fa
+	                  fa-envelope"></i> <a href="mailto:gmareske@gmail.com">gmareske@gmail.com</a></li>
+            <li><i class="fa fa-envelope"><a href="mailto:mareskeg@grinnell.edu">mareskeg@grinnell.edu</a></i></li>
 	    <li><i class="fa fa-phone"></i> +19132068204</li>
 	  </ul>
 	</div>
@@ -68,10 +78,18 @@
 	<div id="project-txt" class="text hide">
 	  <h2>Projects</h2>
 	  <ul>
-	    <li><a href="https://github.com/gmareske/edventure"><i class="fa
-	    fa-github"></i></a><b> (edv)enture</b>
-	      <p>edventure is an adventurous text
-		editor, or an text-editing adventure.</p></li>
+            <li><a href="https://github.com/gmareske/emp-mode"><i class="fa
+            fa-github"></i></a><b>emp-mode</b>
+              <p>
+                An emacs mode I wrote which allows for agnostic music
+                player control from within Emacs.
+              </p>
+            </li>
+	    <li><a href="https://github.com/gmareske/Hid3"><i class="fa
+	    fa-github"></i></a><b> Hid3</b>
+	      <p>A id3 tag parser written in pure Haskell. Id3 tags are
+	    what contain all of the data inside of mp3 and other music
+	        files.</p></li>
 	    <hr/>
 	    <li><a href="https://github.com/gmareske/saveit"><i class="fa
 	    fa-github"></i></a><b> SaveIt</b>
@@ -80,32 +98,32 @@
 		at <a href="http://bigdata.uiowa.edu/">Hack UIowa 2017.</a></p>
 	    </li>
 	    <hr/>
-	    <li><a href="https://github.com/gmareske/little-brainfuck"><i class="fa fa-github"></i></a><b> Little Brainfuck</b>
-		<p>Small brainfuck interpreter written in C.</p>
-	    </li>
-	    <hr/>
-	    <li><a href="http://kdic.grinnell.edu/stream"><i class="fa fa-music"></i></a>
-	      <a href=""><i class="fa fa-github"></i></a><b> Cyborg
-		Soiree </b>
-	      <p>Weekly radio show on KDICfm powered by Python
-	      code. Code is on github and you can listen to an online
-		stream <a href="http://kdic.grinnell.edu/stream">here</a>.</p>
-	    </li>
+	    <!-- <li><a href="https://github.com/gmareske/little-brainfuck"><i class="fa fa-github"></i></a><b> Little Brainfuck</b> -->
+	    <!--     <p>Small brainfuck interpreter written in C.</p> -->
+	    <!-- </li> -->
+	    <!-- <hr/> -->
+	    <!-- <li><a href="http://kdic.grinnell.edu/stream"><i class="fa fa-music"></i></a> -->
+	    <!--   <a href=""><i class="fa fa-github"></i></a><b> Cyborg -->
+	    <!--     Soiree </b> -->
+	    <!--   <p>Weekly radio show on KDICfm powered by Python -->
+	    <!--   code. Code is on github and you can listen to an online -->
+	    <!--     stream <a href="http://kdic.grinnell.edu/stream">here</a>.</p> -->
+	    <!-- </li> -->
 	  </ul>
 	</div>
 	<!-- Links section -->
 	<div id="links-txt" class="text hide">
 	  <h2>My Links</h2>
 	  <p>
-	    It's a staple for everyone's personal website to
-	    curate some awesome links to interweb content.
+            Links to things I love:
 	  </p>
 	  <ul>
 	    <li>
-	      <a href="http://www.gigamonkeys.com/book/">Practical
-		Common Lisp</a>
-	      <p>Free and amazing resource to learn Lisp by completing
-	      projects rather than mindlessly typing in syntax.</p>
+	      <a href="https://www.facebook.com/FreesoundGrinnell/">Freesound
+	      Facebook page</a>
+	      <p>Freesound is a college student music group I help
+	      facilitate. We put on huge music shows in the fall and
+	      spring and do general sound support on campus.</p>
 	    </li>
 	    <hr/>
 	  </ul>
@@ -116,8 +134,8 @@
 	  	  <li><a href="mailto:gmareske@gmail.com"><i class="fa fa-2x fa-envelope"></i></a></li>
 	  <li><a href="https://github.com/gmareske"><i class="fa fa-2x
 	  fa-github"></i></a></li>
-	  <li><a href="https://twitter.com/mareskeg"><i class="fa
-	  fa-2x fa-twitter"></i></a></li>
+	  <!-- <li><a href="https://twitter.com/mareskeg"><i class="fa -->
+	  <!-- fa-2x fa-twitter"></i></a></li> -->
 	  <li><a href="http://open.spotify.com/user/gmareske"><i class="fa fa-2x fa-spotify"></i></a></li>
 	</ul>
       </div>
