The org publish update

--- a/index.html
+++ b/index.html
@@ -31,14 +31,40 @@
 	<p>This is the website of Griffin Mareske.</p>
 
 	<p><i>Recently revamped in the year of our Lord 2023</i></p>
-	<h3>Other Sites</h3>
-	<p>You can contact me:</p>
+
+	<section>
+	  <h2>Who am I?</h2>
+	  <blockquote>"Guy at Home Depot you'd ask for help only to find out that he's not an employee"</blockquote>
+	  <p>Born and raised here in the Midwest, I'm a young guy working in steel framing and associated trades. I have a computer science degree from Grinnell College and enjoy writing software on the side. When I'm not grinding my bones to dust I like to play saxophone, cook, game, and write something down about any of the above.</p>
+	  
+	  <p>As far as I can tell, I am the only Griffin Mareske (with internet access) that exists right now. If you are another one, contact me so we can duel for the title.</p>
+	</section>
+	
+	<section>
+	  <h2>What's Here:</h2>
+	  <ul class="link-list">
+	    <li><a href="./blog/index.html">The Blog</a>. Find posts about buildings, music, technology, Midwest supremacy, and more!</li>
+	    <li><a href="">What I'm listening to currently</a></li>
+	    <li><a href="./links.html">Cool Things</a>. A collection on links to other parts of the internet I love.</li>
+	    <li><a href="/feed.xml">RSS Feed</a>. Subscribe for all updates!</li>
+	  </ul>
+	</section>
+
+	<section>
+	<h2>Other Sites:</h2>
+	<p>You can </p>
 	<ul class="link-list">
 	  <li><a href="mailto:gmareske@gmail.com">Email me</a></li>
 	  <li><a href="https://github.com/gmareske">Git me</a></li>
 	  <li><a href="https://instagram.com/mareskeg">Look at me</a></li>
 	  <li><a href="https://open.spotify.com/user/gmareske?si=39941577e3e748a6">Listen to me</a></li>
 	</ul>
+	</section>
+	<footer>
+	  <hr/>
+	  <p>Copyright Griffin Mareske 2020-2023</p>
+	</footer>
+
       </div>
       <script>
 	const spinRecord = function() {
