--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	    <li><a href="./blog/index.html">The Blog</a>. Find posts about buildings, music, technology, Midwest supremacy, and more!</li>
 	    <li><a href="">What I'm listening to currently</a></li>
 	    <li><a href="./links.html">Cool Things</a>. A collection on links to other parts of the internet I love.</li>
-	    <li><a href="/feed.xml">RSS Feed</a>. Subscribe for all updates!</li>
+	    <li><a href="/feed.xml">RSS Feed</a>. <em>WIP.</em> Subscribe for all updates!</li>
 	  </ul>
 	</section>
 
