--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
 
 	<section>
 	  <h2>Who am I?</h2>
-	  <blockquote>"Guy at Home Depot you'd ask for help only to find out that he's not an employee"</blockquote>
-	  <p>Born and raised here in the Midwest, I'm a young guy working in steel framing and associated trades. I have a computer science degree from Grinnell College and enjoy writing software on the side. When I'm not grinding my bones to dust I like to play saxophone, cook, game, and write something down about any of the above.</p>
-	  
 	  <p>As far as I can tell, I am the only Griffin Mareske (with internet access) that exists right now. If you are another one, contact me so we can duel for the title.</p>
 	</section>
 	
 	<section>
 	  <h2>What's Here:</h2>
 	  <ul class="link-list">
-	    <li><a href="./blog/index.html">The Blog</a>. Find posts about buildings, music, technology, Midwest supremacy, and more!</li>
+	    <!-- <li><a href="./blog/index.html">The Blog</a>. Find posts about buildings, music, technology, Midwest supremacy, and more!</li> -->
 	    <li><a href="">What I'm listening to currently</a></li>
 	    <li><a href="./links.html">Cool Things</a>. A collection on links to other parts of the internet I love.</li>
 	    <li><a href="/feed.xml">RSS Feed</a>. <em>WIP.</em> Subscribe for all updates!</li>
